feat: Stablish Microservice package

--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -8,7 +8,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "tslint -p tsconfig.json -c ../../tslint.json"
+    "lint": "tslint -p tsconfig.json -c ../../tslint.json",
+    "test": "mocha -r 'src/index.spec.js' src/**/**/*.spec.ts --exit"
   },
   "keywords": [
     "addapptables",
@@ -25,9 +26,13 @@
     "url": "https://github.com/addapptables/miscellaneous/issues"
   },
   "dependencies": {
+    "@addapptables/bus": "^0.0.0",
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4"
+  },
+  "devDependencies": {
+    "@nestjs/testing": "^6.10.14"
   }
 }
