--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
     "lerna": "^3.20.0",
+    "mocha": "^7.0.0",
+    "sinon": "^8.0.4",
     "ts-node": "^8.6.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4"
