--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -30,7 +30,8 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.10.14"
