feat: changed dependencies and added peerdependencies to microservices modules.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@nestjs/common": "^6.11.1",
+    "@nestjs/core": "^6.11.1",
     "@types/mocha": "^5.2.7",
+    "bluebird": "^3.7.2",
     "chai": "^4.2.0",
     "lerna": "^3.20.0",
     "mocha": "^7.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.4",
     "sinon": "^8.0.4",
     "ts-node": "^8.6.1",
     "tslint": "^5.20.1",
