--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -26,13 +26,16 @@
     "url": "https://github.com/addapptables/miscellaneous/issues"
   },
   "dependencies": {
+    "uuid": "^3.4.0",
+    "@addapptables/bus": "^0.0.0"
+  },
+  "peerDependencies": {
     "@addapptables/bus": "^0.0.0",
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "bluebird": "^3.7.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.4",
-    "uuid": "^3.4.0"
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.10.14",
