--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@nestjs/common": "^6.11.1",
-    "@nestjs/core": "^6.11.1",
     "@types/chai": "4.2.7",
+    "@types/kafka-node": "^3.0.0",
     "@types/mocha": "^5.2.7",
-    "bluebird": "^3.7.2",
     "chai": "^4.2.0",
     "lerna": "^3.20.0",
     "mocha": "^7.0.0",
@@ -16,5 +14,12 @@
     "ts-node": "^8.6.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4"
+  },
+  "dependencies": {
+    "@nestjs/common": "^6.11.4",
+    "@nestjs/core": "^6.11.4",
+    "@types/sinon": "^7.5.1",
+    "bluebird": "^3.7.2",
+    "kafkajs": "^1.11.0"
   }
 }
