--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/core": "^6.11.4",
     "@types/sinon": "^7.5.1",
     "bluebird": "^3.7.2",
-    "kafkajs": "^1.11.0"
+    "kafkajs": "^1.11.0",
+    "nats": "^1.4.0"
   }
 }
