--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/sinon": "^7.5.1",
     "bluebird": "^3.7.2",
     "kafkajs": "^1.11.0",
+    "mqtt": "^3.0.0",
     "nats": "^1.4.0"
   }
 }
