--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/chai": "4.2.7",
     "@types/kafka-node": "^3.0.0",
     "@types/mocha": "^5.2.7",
+    "@types/redis": "^2.8.14",
     "chai": "^4.2.0",
     "lerna": "^3.20.0",
     "mocha": "^7.0.0",
@@ -21,6 +22,7 @@
     "@types/sinon": "^7.5.1",
     "bluebird": "^3.7.2",
     "kafkajs": "^1.11.0",
+    "redis": "^2.8.0",
     "mqtt": "^3.0.0",
     "nats": "^1.4.0"
   }
