--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "devDependencies": {
     "@types/chai": "4.2.7",
     "@types/chai-uuid": "^1.0.1",
+    "@types/kafka-node": "^3.0.0",
     "@types/mocha": "^5.2.7",
+    "@types/redis": "^2.8.14",
     "@types/sinon": "^7.5.1",
     "bluebird": "^3.7.2",
-    "@types/kafka-node": "^3.0.0",
-    "@types/redis": "^2.8.14",
     "chai": "^4.2.0",
     "chai-uuid": "^1.0.6",
     "lerna": "^3.20.0",
@@ -25,10 +25,11 @@
     "@nestjs/common": "^6.11.4",
     "@nestjs/core": "^6.11.4",
     "@types/sinon": "^7.5.1",
+    "amqplib": "^0.5.5",
     "bluebird": "^3.7.2",
     "kafkajs": "^1.11.0",
-    "redis": "^2.8.0",
     "mqtt": "^3.0.0",
-    "nats": "^1.4.0"
+    "nats": "^1.4.0",
+    "redis": "^2.8.0"
   }
 }
