--- a/package.json
+++ b/package.json
@@ -2,9 +2,34 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@types/chai": "4.2.7",
+    "@types/chai-uuid": "^1.0.1",
+    "@types/kafka-node": "^3.0.0",
+    "@types/mocha": "^5.2.7",
+    "@types/redis": "^2.8.14",
+    "@types/sinon": "^7.5.1",
+    "bluebird": "^3.7.2",
+    "chai": "^4.2.0",
+    "chai-uuid": "^1.0.6",
     "lerna": "^3.20.0",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.4",
+    "sinon": "^8.0.4",
     "ts-node": "^8.6.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4"
+  },
+  "dependencies": {
+    "@nestjs/common": "^6.11.4",
+    "@nestjs/core": "^6.11.4",
+    "@types/sinon": "^7.5.1",
+    "amqplib": "^0.5.5",
+    "bluebird": "^3.7.2",
+    "kafkajs": "^1.11.0",
+    "mqtt": "^3.0.0",
+    "nats": "^1.4.0",
+    "redis": "^2.8.0"
   }
 }
