--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -8,7 +8,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "tslint -p tsconfig.json -c ../../tslint.json"
+    "lint": "tslint -p tsconfig.json -c ../../tslint.json",
+    "test": "mocha -r 'tests/index.spec.js' tests/**/*.spec.ts",
+    "coverage": "nyc yarn test",
+    "coverage-report": "nyc --reporter=lcov yarn test"
   },
   "keywords": [
     "addapptables",
@@ -25,9 +28,19 @@
     "url": "https://github.com/addapptables/miscellaneous/issues"
   },
   "dependencies": {
+    "ramda": "^0.26.1",
+    "uuid": "^3.4.0"
+  },
+  "peerDependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
+    "bluebird": "^3.7.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4"
+  },
+  "devDependencies": {
+    "@nestjs/testing": "^6.10.14",
+    "@types/bluebird": "^3.5.29",
+    "@types/ramda": "^0.26.40"
   }
 }
