--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -29,7 +29,10 @@
   },
   "dependencies": {
     "ramda": "^0.26.1",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "@nestjs/common": "^6.10.14",
+    "@nestjs/core": "^6.10.14",
+    "reflect-metadata": "^0.1.13"
   },
   "peerDependencies": {
     "@nestjs/common": "^6.10.14",
