feat: query-bus and command-bus return result from handle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6"
+    "target": "es6",
+    "sourceMap": true
   },
   "include": [],
   "exclude": [
