chore: changed version

--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@addapptables/microservice",
-  "version": "0.0.0",
+  "version": "0.0.1-0",
   "description": "addapptables microservice",
   "author": "development@addapptables.com",
   "homepage": "https://github.com/addapptables/miscellaneous#readme",
