--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -28,15 +28,25 @@
     "url": "https://github.com/addapptables/miscellaneous/issues"
   },
   "dependencies": {
+    "@nestjs/common": "^7.0.11",
+    "@nestjs/core": "^7.0.11",
+    "@types/sinon": "^9.0.0",
+    "amqplib": "^0.5.5",
+    "bluebird": "^3.7.2",
+    "kafkajs": "^1.11.0",
+    "mqtt": "^4.0.1",
+    "nats": "^1.4.9",
+    "redis": "^3.0.2",
     "ramda": "^0.27.0",
-    "uuid": "^8.0.0"
+    "uuid": "^8.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.5"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.10.14",
-    "@nestjs/core": "^6.10.14",
-    "bluebird": "^3.7.2",
+    "@nestjs/common": "^7.0.11",
+    "@nestjs/core": "^7.0.11",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {
     "@nestjs/testing": "^7.0.11",
