--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
   "name": "root",
-  "private": true,
+  "private": false,
+  "dependencies": {
+    "@nestjs/common": "^7.0.11",
+    "@nestjs/core": "^7.0.11",
+    "amqplib": "^0.5.5",
+    "bluebird": "^3.7.2",
+    "kafkajs": "^1.11.0",
+    "mqtt": "^4.0.1",
+    "nats": "^1.4.9",
+    "ramda": "^0.27.0",
+    "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.5",
+    "uuid": "^8.0.0"
+  },
   "devDependencies": {
+    "@types/bluebird": "^3.5.32",
     "@types/chai": "4.2.11",
     "@types/chai-uuid": "^1.0.1",
     "@types/kafka-node": "^3.0.0",
     "@types/mocha": "^7.0.2",
+    "@types/ramda": "^0.27.11",
     "@types/redis": "^2.8.20",
-    "@types/sinon": "^7.5.1",
+    "@types/sinon": "^9.0.4",
     "chai": "^4.2.0",
     "chai-uuid": "^1.0.6",
     "lerna": "^3.21.0",
