Fix/bug rabbitmq connection (#18)
* Develop (#17)

* feat: Add base bus project

* feat: Stablish Microservice package

* refactor(bus adapter): change way to config an adapter

* feat: add base of saga

* feat: add ISagaInstance interface

* feat: complete workflow working

* feat: Add final saga solution (pending for refactor)

* refactor!: The code of the sagas and bus was refactored

* feat: Add refactor retouching

* feat: changed dependencies and added peerdependencies to microservices modules.

* feat: LocalBusAdapter implemented and tested

* feat: The code within the local adapter was refactored

* feat: Changed external packages to the top

* feat: kafka-bus-adapter was implemented and tested

* feat: Nats bus adapter was implemented and tested (#8)

* feat: Nats bus adapter was implemented and tested

* chore: Load nats package into the class NastBusAdapter

* Mqtt bus adapter was implemented and tested (#6)

* feat: Mqtt bus adapter was implemented an tested

* chore: Remove typings from mqqt adapter

* feat: Redis bus adapter was implemented and tested (#7)

* feat: Redis bus adapter was implemented and tested

* feat: Redis: rename file redis-bus-adapter to redis-bus.adapter

* chore: Load redis package into the class RedisBusAdapter

* microservice unit test (#4)

* feat: Add initialize-adapter-bus.service and initialize-microservice.service tests

* feat: Add explore service test

Co-authored-by: Mateo Guerra <teito.lop@gmail.com>

* feat: loadpackage function was tested

* feat: Add query bus (#11)

* fix: remove bus package (#10)

* feat: Modify RabbitMQBusAdapter and add test (#9)

* feat: Modify RabbitMQBusAdapter and add test

* feat: Add new global dependencies

* feat: query-bus and command-bus return result from handle

* feat: Logger was added to bus adapter

* fix: Command accept nullable id

* chore: changed version

* chore: update nest version and throw an exce

--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@addapptables/microservice",
-  "version": "0.0.2-0",
+  "version": "0.0.3-0",
   "description": "addapptables microservice",
   "author": "development@addapptables.com",
   "homepage": "https://github.com/addapptables/miscellaneous#readme",
@@ -28,25 +28,14 @@
     "url": "https://github.com/addapptables/miscellaneous/issues"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.11",
-    "@nestjs/core": "^7.0.11",
-    "@types/sinon": "^9.0.0",
-    "amqplib": "^0.5.5",
-    "bluebird": "^3.7.2",
-    "kafkajs": "^1.11.0",
-    "mqtt": "^4.0.1",
-    "nats": "^1.4.9",
-    "redis": "^3.0.2",
-    "ramda": "^0.27.0",
-    "uuid": "^8.0.0",
+    "uuid": "^8.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.5"
+    "bluebird": "^3.7.2"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.11",
-    "@nestjs/core": "^7.0.11",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.5"
+    "@nestjs/common": ">=7.0.0 <8.0.0",
+    "@nestjs/core": ">=7.0.0 <8.0.0",
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@nestjs/testing": "^7.0.11",
