--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "root",
-  "version": "1.0.0-0",
+  "version": "1.0.0",
   "private": false,
   "license": "MIT",
   "description": "addapptables microservice",
