--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 jobs:
-  build:
+  test:
     working_directory: ~/crafts
     docker:
       - image: circleci/node:12
@@ -18,34 +18,14 @@ jobs:
           name: Save Yarn Package Cache
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
-            - ~/.cache/yarn  
-
-  test:
-    working_directory: ~/crafts
-    machine: true
-    steps:
-      - checkout
-      - run: 
-          name: Prepare nvm
-          command: |
-            echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
-            echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
-      - run: 
-          name: Upgrade Node.js
-          command: |
-            nvm install v12
-            node -v
-            nvm alias default v12
+            - ~/.cache/yarn 
       - run:
           name: unit test
-          command: npm run test
+          command: yarn test
 
 workflows:
   version: 2
   build-and-test:
     jobs:
-      - build
-      - test:
-          requires:
-            - build
+      - test
       
