feat: added coveralls

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
-version: 2
+version: 2.1
+
+orbs:
+  coveralls: coveralls/coveralls@1.0.6
 
 general:
   branches:
@@ -30,10 +33,22 @@ jobs:
       - run:
           name: unit test
           command: yarn test
+      - coveralls/upload
+      - store_artifacts: # special step to save test results as as artifact
+          # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
+          path: test-results
+          prefix: tests
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
+          path: coverage
+          prefix: coverage
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: test-results
 
 workflows:
-  version: 2
-  build-and-test:
+  run-test:
     jobs:
-      - test
-      
+      - test:
+          context: addapptables 
+notify:
+  webhooks:
+    - url: https://coveralls.io/webhook?repo_token=${process.env.COVERALLS_REPO_TOKEN}
