--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
       - run:
           name: unit test
           command: yarn test
+      - run: # run code coverage report
+          name: code-coverage
+          command: yarn coverage
       - coveralls/upload
       - store_artifacts: # special step to save test results as as artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
@@ -49,6 +52,3 @@ workflows:
     jobs:
       - test:
           context: addapptables 
-notify:
-  webhooks:
-    - url: https://coveralls.io/webhook?repo_token=${process.env.COVERALLS_REPO_TOKEN}
