--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 
 general:
   branches:
@@ -30,10 +30,12 @@ jobs:
       - run:
           name: unit test
           command: yarn test
+      - run: # run code coverage report
+          name: code-coverage
+          command: yarn coverage
 
 workflows:
-  version: 2
-  build-and-test:
+  run-test:
     jobs:
-      - test
-      
+      - test:
+          context: addapptables 
