--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.11",
-    "@nestjs/core": "^7.0.11",
+    "@nestjs/common": "8.2.4",
+    "@nestjs/core": "8.2.4",
     "amqplib": "^0.5.5",
     "bluebird": "^3.7.2",
     "kafkajs": "^1.11.0",
@@ -21,11 +21,11 @@
     "ramda": "^0.27.0",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.5",
+    "rxjs": "7.4.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.4.2",
+    "@nestjs/testing": "8.2.4",
     "@types/bluebird": "^3.5.32",
     "@types/chai": "4.2.11",
     "@types/chai-uuid": "^1.0.1",
@@ -43,7 +43,7 @@
     "sinon": "^9.0.2",
     "ts-node": "^8.10.1",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.2"
+    "typescript": "4.5.4"
   },
   "publishConfig": {
     "access": "public"
