--- a/packages/microservice/package.json
+++ b/packages/microservice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@addapptables/microservice",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "addapptables microservice",
   "author": "dev@addapptables.com",
   "homepage": "https://github.com/addapptables/miscellaneous#readme",
@@ -34,12 +34,12 @@
     "ramda": "^0.27.0"
   },
   "peerDependencies": {
-    "@nestjs/common": ">=7.0.0 <8.0.0",
-    "@nestjs/core": ">=7.0.0 <8.0.0",
-    "rxjs": ">=6.5.4 <7.0.0"
+    "@nestjs/common": ">=8.0.0 <9.0.0",
+    "@nestjs/core": ">=8.0.0 <9.0.0",
+    "rxjs": ">=7.0.0 <8.0.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.0.11",
+    "@nestjs/testing": "8.2.4",
     "@types/bluebird": "^3.5.30",
     "@types/ramda": "^0.27.4"
   }
